--- a/client/styles.css
+++ b/client/styles.css
@@ -222,6 +222,20 @@ body {
     width: 50vw;
 }
 
+.track-title {
+    font-weight: bold;
+    font-size: 16px;
+  }
+  
+  /* 아티스트 정보 스타일 */
+  .track-artists {
+    font-weight: normal;
+    font-size: 14px;
+    color: #555; /* 부가 정보 느낌을 주기 위한 색상 */
+    margin-left: 5px; /* 약간의 여백 추가 */
+  }
+  
+
 /* Date Selector */
 .date-selector {
     display: flex;
