--- a/client/styles.css
+++ b/client/styles.css
@@ -91,6 +91,9 @@ body {
 
 .search-results-popup .result-section {
     margin-bottom: 10px;
+    font-size: 16px;
+    font-weight:bolder;
+    color: #333;
 }
 
 .search-results-popup .result-section h3 {
