--- a/client/styles.css
+++ b/client/styles.css
@@ -26,10 +26,12 @@ body {
 
 
 #chart-title {
-    margin-top: 200px; /* h3와 검색 바 사이의 공간 추가 */
-    margin-bottom: 100px; /* h3와 검색 바 사이의 공간 추가 */
-    font-size: 36px; /* 폰트 크기 설정 */
-    color: #00C73C; /* 폰트 색상 설정 */
+    margin-top: 200px; 
+    margin-bottom: 100px;
+    font-size: 36px; 
+    background: linear-gradient(to right, #00C73C, #3498DB, #E44C29);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 /* Search Container */
@@ -237,7 +239,12 @@ body {
     color: #555; /* 부가 정보 느낌을 주기 위한 색상 */
     margin-left: 5px; /* 약간의 여백 추가 */
   }
-  
+  .artist-debut{
+      font-weight: normal;
+      font-size: 14px;
+      color: #555; /* 부가 정보 느낌을 주기 위한 색상 */
+      margin-left: 5px; /* 약간의 여백 추가 */
+  }
 
 /* Date Selector */
 .date-selector {
