--- a/react-client/src/index.css
+++ b/react-client/src/index.css
@@ -72,10 +72,29 @@
       @apply text-[0.8125rem]; /* md에서 extra-small 크기 */
     }
   }
-
-  /* @screen lg 및 @screen xl에서는 크기 변동 없음 */
+}
+.slick-arrow{
+  height:10px;
+width: 10px;
 }
 
+.slick-arrow.slick-next,
+.slick-arrow.slick-prev{
+background-color: #428cff;
+height:50px;
+width: 50px;
+display: flex;
+align-items: center;
+justify-content: center;
+border-radius: 50%;
+}
+
+.slick-arrow.slick-next:hover,
+.slick-arrow.slick-prev:hover
+{
+    background-color: #2574f5;
+    opacity:1;
+}
 
 
 
